# conway-s-game-of-life

./: README.md  pyproject.toml
src/conways_game_of_life/: cli.py  game.py  rules.py
