[project]
name = "conways-game-of-life"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Simon Große Beckmann", email = "simongrossebeckmann@gmail.com" },
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
run = "conways_game_of_life.cli:main"

[tool.pdm]
distribution = true
